Update src/test/java/com/microsoft/fabric/connect/eventhouse/sink/it/EventHouseSinkIT.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>